add comments explain code in binary search tree

--- a/SetMembership.ipynb
+++ b/SetMembership.ipynb
@@ -290,6 +290,7 @@
     "        \n",
     "    def insertElement(self, element):\n",
     "        inserted = False\n",
+    "        # ADD YOUR CODE HERE\n",
     "        new_node = TreeNode_BinarySearchTree(element)\n",
     "        if self.root is None:\n",
     "            self.root = new_node\n",
@@ -298,18 +299,22 @@
     "            current = self.root\n",
     "            while True:\n",
     "                if element < current.value:\n",
+    "                    # check the left when the element want to insert is smaller\n",
     "                    if current.left is None:\n",
     "                        current.left = new_node\n",
     "                        inserted = True\n",
     "                        break\n",
     "                    else:\n",
+    "                        # move to the left\n",
     "                        current = current.left\n",
     "                elif element > current.value:\n",
+    "                    # check the right when the element want to insert is smaller\n",
     "                    if current.right is None:\n",
     "                        current.right = new_node\n",
     "                        inserted = True\n",
     "                        break\n",
     "                    else:\n",
+    "                        # move to the right\n",
     "                        current = current.right\n",
     "                else:\n",
     "                    # element is already in the tree\n",
@@ -318,14 +323,17 @@
     "    \n",
     "    def searchElement(self, element):\n",
     "        found = False\n",
+    "        # ADD YOUR CODE HERE\n",
     "        current = self.root\n",
     "        while current is not None:\n",
     "            if element == current.value:\n",
     "                found = True\n",
     "                break\n",
     "            elif element < current.value:\n",
+    "                # move to the left if the element want to find is smaller\n",
     "                current = current.left\n",
     "            else:\n",
+    "                # move to the right if the element want to find is larger\n",
     "                current = current.right\n",
     "        return found\n",
     "\n",
