Took out the abstract set

--- a/SetMembership.ipynb
+++ b/SetMembership.ipynb
@@ -131,46 +131,7 @@
     }
    ],
    "source": [
-    "from abc import ABC, abstractmethod\n",
-    "\n",
-    "class AbstractSet(ABC):\n",
-    "    @abstractmethod\n",
-    "    def __init__(self):\n",
-    "        self.set = []\n",
-    "\n",
-    "    @abstractmethod\n",
-    "    def insertElement(self, element):     \n",
-    "        inserted = False\n",
-    "        if element not in self.set:\n",
-    "            self.set.append(element)\n",
-    "            inserted = True\n",
-    "        return inserted\n",
-    "    \n",
-    "    @abstractmethod\n",
-    "    def searchElement(self, element):\n",
-    "        found = False\n",
-    "        if element in self.set:\n",
-    "            found = True\n",
-    "        return found       \n",
-    "    \n",
-    "# abstract class to represent a synthetic data generator\n",
-    "class AbstractTestDataGenerator(ABC):\n",
-    "    \n",
-    "    # constructor\n",
-    "    @abstractmethod\n",
-    "    def __init__(self):\n",
-    "        pass           \n",
-    "        \n",
-    "    # creates and returns a list of length \"size\" of strings\n",
-    "    # size : int\n",
-    "    # data : list<str>\n",
-    "    @abstractmethod\n",
-    "    def generateData(self, size):     \n",
-    "        data = [\"\"]*size\n",
-    "        return data   \n",
-    "\n",
-    "\n",
-    "class SequentialSearchSet(AbstractSet):\n",
+    "class SequentialSearchSet():\n",
     "    def __init__(self):\n",
     "        # ADD YOUR CODE HERE\n",
     "        self.data = []        \n",
