--- a/SetMembership.ipynb
+++ b/SetMembership.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
     }
    ],
    "source": [
-    "class SequentialSearchSet():\n",
+    "class SequentialSearchSet(AbstractSet):\n",
     "    def __init__(self):\n",
     "        # ADD YOUR CODE HERE\n",
     "        self.data = []        \n",
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -269,15 +269,15 @@
      "output_type": "stream",
      "text": [
       "True\n",
-      "left shift\n",
+      "left rotation\n",
       "True\n",
-      "right shift\n",
+      "right rotation\n",
       "shift color\n",
       "True\n",
-      "left shift\n",
+      "left rotation\n",
       "True\n",
       "shift color\n",
-      "left shift\n",
+      "left rotation\n",
       "True\n",
       "True\n",
       "True\n",
