--- a/SetMembership.ipynb
+++ b/SetMembership.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,11 +78,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 2,
-=======
-   "execution_count": 4,
->>>>>>> f39e3c6a9279dac29f92f31f04f2537e3398c9b1
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +125,7 @@
        "True"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,11 +175,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 16,
-=======
-   "execution_count": 7,
->>>>>>> f39e3c6a9279dac29f92f31f04f2537e3398c9b1
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -199,60 +191,6 @@
     }
    ],
    "source": [
-    "# class BinarySearchTreeSet(AbstractSet):\n",
-    "    \n",
-    "#     def __init__(self):\n",
-    "#         # ADD YOUR CODE HERE\n",
-    "#         self.root = None\n",
-    "#         pass           \n",
-    "     \n",
-    "    \n",
-    "        \n",
-    "#     def insertElement(self, element):\n",
-    "#         inserted = False\n",
-    "#         # ADD YOUR CODE HERE\n",
-    "#         if self.root is None:\n",
-    "#             self.root = {'val': element, 'left': None, 'right': None}\n",
-    "#             inserted = True\n",
-    "#         else:\n",
-    "#             current = self.root\n",
-    "#             while current is not None:\n",
-    "#                 if current['val'] == element:\n",
-    "#                     inserted = False\n",
-    "#                     break\n",
-    "#                 elif current['val'] > element:\n",
-    "#                     if current['left'] is None:\n",
-    "#                         current['left'] = {'val': element, 'left': None, 'right': None}\n",
-    "#                         inserted = True\n",
-    "#                         break\n",
-    "#                     else:\n",
-    "#                         current = current['left']\n",
-    "#                 else:\n",
-    "#                     if current['right'] is None:\n",
-    "#                         current['right'] = {'val': element, 'left': None, 'right': None}\n",
-    "#                         inserted = True\n",
-    "#                         break\n",
-    "#                     else:\n",
-    "#                         current = current['right']\n",
-    "#         return inserted\n",
-    "    \n",
-    "    \n",
-    "\n",
-    "#     def searchElement(self, element):     \n",
-    "#         found = False\n",
-    "#         # ADD YOUR CODE HERE\n",
-    "#         current = self.root\n",
-    "#         while current is not None:\n",
-    "#             if current['val'] == element:\n",
-    "#                 found = True\n",
-    "#                 break\n",
-    "#             elif current['val'] > element:\n",
-    "#                     current = current['left']\n",
-    "#             else:\n",
-    "#                     current = current['right']\n",
-    "#         return found\n",
-    "    \n",
-    "\n",
     "class BinarySearchTreeSet(AbstractSet):\n",
     "    def __init__(self):\n",
     "        self.root = None\n",
@@ -466,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,33 +416,26 @@
     "        self.hash_count = has_count\n",
     "        self.bit_array = [0] * size\n",
     "        pass           \n",
-    "    \n",
-    "    def hashFunction(self, string):\n",
-    "        hash_values = []\n",
-    "        hash1 = hash(string)\n",
-    "        hash2 = hash(str(hash1) + string)\n",
-    "        for i in range(self.hash_count):\n",
-    "            value = (hash1 + i * hash2) % self.size\n",
-    "            hash_values.append(value)\n",
-    "        return hash_values\n",
+    "     \n",
     "    \n",
     "        \n",
     "    def insertElement(self, element):\n",
     "        inserted = False\n",
     "        # ADD YOUR CODE HERE\n",
     "        for seed in range(self.hash_count):\n",
-    "            result = self.hashFunction(seed, element) % self.size\n",
+    "            result = mmh3.hash(string, seed) % self.size\n",
     "            self.bit_array[result] = 1\n",
     "        \n",
     "        inserted = True\n",
     "        return inserted\n",
+    "    \n",
     "    \n",
     "\n",
     "    def searchElement(self, element):\n",
     "        found = True\n",
     "        # ADD YOUR CODE HERE\n",
     "        for seed in range(self.hash_count):\n",
-    "            result = self.hashFunction(seed, element) % self.size\n",
+    "            result = mmh3.hash(string, seed) % self.size\n",
     "            if self.bit_array[result] == 0:\n",
     "                found = False\n",
     "                break\n",
