Bloom Filter Hash Function added

--- a/SetMembership.ipynb
+++ b/SetMembership.ipynb
@@ -416,26 +416,33 @@
     "        self.hash_count = has_count\n",
     "        self.bit_array = [0] * size\n",
     "        pass           \n",
-    "     \n",
+    "    \n",
+    "    def hashFunction(self, string):\n",
+    "        hash_values = []\n",
+    "        hash1 = hash(string)\n",
+    "        hash2 = hash(str(hash1) + string)\n",
+    "        for i in range(self.hash_count):\n",
+    "            value = (hash1 + i * hash2) % self.size\n",
+    "            hash_values.append(value)\n",
+    "        return hash_values\n",
     "    \n",
     "        \n",
     "    def insertElement(self, element):\n",
     "        inserted = False\n",
     "        # ADD YOUR CODE HERE\n",
     "        for seed in range(self.hash_count):\n",
-    "            result = mmh3.hash(string, seed) % self.size\n",
+    "            result = self.hashFunction(seed, element) % self.size\n",
     "            self.bit_array[result] = 1\n",
     "        \n",
     "        inserted = True\n",
     "        return inserted\n",
-    "    \n",
     "    \n",
     "\n",
     "    def searchElement(self, element):\n",
     "        found = True\n",
     "        # ADD YOUR CODE HERE\n",
     "        for seed in range(self.hash_count):\n",
-    "            result = mmh3.hash(string, seed) % self.size\n",
+    "            result = self.hashFunction(seed, element) % self.size\n",
     "            if self.bit_array[result] == 0:\n",
     "                found = False\n",
     "                break\n",
