--- a/SetMembership.ipynb
+++ b/SetMembership.ipynb
@@ -458,20 +458,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['h', 'LnLwtLOQ']\n",
-      "['K', 'vbBdtlC', 'RGGimD']\n",
-      "['BXfr', 'ZnRyla', 'N', 'iAVhm']\n",
-      "['xl', 'cvL', 'SzOGKrqCdB', 'NaO', 'f']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import string\n",
     "import random\n",
@@ -525,21 +514,81 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import timeit\n",
     "\n",
     "# ADD YOUR TEST CODE HERE TO WORK ON SYNTHETIC DATA\n",
     "\n",
+    "# Create an object of class TestDataGenerator and use the object to generateData\n",
+    "SyntheticTest = TestDataGenerator()\n",
+    "data = test.generateData(10)\n",
+    "\n",
+    "# Binary Search tree\n",
+    "bst = BinarySearchTreeSet()\n",
+    "start = timeit.default_timer()\n",
+    "for value in data:\n",
+    "    bst.insertElement(value)\n",
+    "for value in data:\n",
+    "    bst.searchElement(value)\n",
+    "bst_time = timeit.default_timer - start\n",
+    "\n",
+    "# Sequential Search\n",
+    "ss = SequentialSearchSet()\n",
+    "random.shuffle(data)\n",
+    "start = timeit.default_timer()\n",
+    "for value in data:\n",
+    "    ss.insertElement(value)\n",
+    "for value in data:\n",
+    "    ss.searchElement(value)\n",
+    "seq_time = timeit.default_timer() - start\n",
+    "\n",
+    "# Balanced Search Tree\n",
+    "avl = BalancedSearchTreeSet()\n",
+    "start = timeit.default_timer()\n",
+    "for value in data:\n",
+    "    avl.insertElement(value)\n",
+    "for value in data:\n",
+    "    avl.searchElement(value)\n",
+    "avl_time = timeit.deault_timer() - start\n",
+    "\n",
+    "# Bloom Filter \n",
+    "bf = BloomFilterSet()\n",
+    "start = timeit.default_timer()\n",
+    "for value in data:\n",
+    "    bf.insertElement(str(value))\n",
+    "for value in data:\n",
+    "    bf.searchElement(str(value))\n",
+    "bf_time = timeit.default_timer() - start\n",
+    "\n",
+    "print(f\"Binary Search Tree: {bst_time:.6f} seconds\")\n",
+    "print(f\"Sequential Search: {seq_time:.6f} seconds\")\n",
+    "print(f\"Balanced Search Tree: {avl_time:.6f} seconds\")\n",
+    "print(f\"Bloom Filter: {bf_time:.6f} seconds\")\n",
+    "\n",
+    "    \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -553,7 +602,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
