--- a/SetMembership.ipynb
+++ b/SetMembership.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
        "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -269,15 +269,9 @@
      "output_type": "stream",
      "text": [
       "True\n",
-      "left rotation\n",
       "True\n",
-      "right rotation\n",
-      "shift color\n",
       "True\n",
-      "left rotation\n",
       "True\n",
-      "shift color\n",
-      "left rotation\n",
       "True\n",
       "True\n",
       "True\n",
@@ -322,7 +316,7 @@
     "                        currentNode = currentNode.right\n",
     "            while True:\n",
     "                if (currentNode.left is None or currentNode.left.color == \"black\") and currentNode.right is not None and currentNode.right.color == \"red\":\n",
-    "                    print(\"left rotation\")\n",
+    "                    # left rotation\n",
     "                    tampNode= currentNode.right\n",
     "                    if tampNode.left is not None:\n",
     "                        currentNode.right = tampNode.left\n",
@@ -343,14 +337,14 @@
     "                    tampNode.color = currentNode.color\n",
     "                    currentNode.color = \"red\"\n",
     "                if currentNode.left is not None and currentNode.left.color == \"red\" and currentNode.right is not None and currentNode.right.color == \"red\":\n",
-    "                    print(\"shift color\")\n",
+    "                    # shift color\n",
     "                    currentNode.left.color = \"black\"\n",
     "                    currentNode.right.color = \"black\"\n",
     "                    currentNode.color = \"red\"\n",
     "                if currentNode.top is None:\n",
     "                    break\n",
     "                if currentNode.color == \"red\" and currentNode.left is not None and currentNode.left.color == \"red\":\n",
-    "                    print(\"right rotation\")\n",
+    "                    # right rotation\n",
     "                    rightNode = currentNode.top\n",
     "                    if rightNode.top is not None:\n",
     "                        topNode = rightNode.top\n",
@@ -404,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,9 +452,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['iXB', 'tPviKQ']\n",
+      "['KoYg', 'iZvQmqmmP', 'vFzSn']\n",
+      "['YSE', 'TZWn', 'tfggmejFon', 'cGyx']\n",
+      "['cnNYtpu', 'z', 'Sdwujn', 'yx', 'Cb']\n"
+     ]
+    }
+   ],
    "source": [
     "import string\n",
     "import random\n",
@@ -499,13 +504,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test-search.txt: \n",
+      "Sequential Search: 0.000006 seconds\n",
+      "Binary Search Tree: 0.000005 seconds\n",
+      "Balanced Search Tree: 0.000005 seconds\n",
+      "\n",
+      "\n",
+      "test1-mobydick.txt: \n",
+      "Sequential Search: 0.000006 seconds\n",
+      "Binary Search Tree: 0.000005 seconds\n",
+      "Balanced Search Tree: 0.000004 seconds\n",
+      "\n",
+      "\n",
+      "test2-warpeace.txt: \n",
+      "Sequential Search: 0.000006 seconds\n",
+      "Binary Search Tree: 0.000004 seconds\n",
+      "Balanced Search Tree: 0.000005 seconds\n",
+      "\n",
+      "\n",
+      "test3-dickens.txt: \n",
+      "Sequential Search: 0.000005 seconds\n",
+      "Binary Search Tree: 0.000005 seconds\n",
+      "Balanced Search Tree: 0.000004 seconds\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import timeit\n",
     "\n",
-    "# ADD YOUR TEST CODE HERE TO WORK ON REAL DATA\n",
+    "file_list = [\"test-search.txt\",\"test1-mobydick.txt\",\"test2-warpeace.txt\",\"test3-dickens.txt\"]\n",
+    "for file in file_list:\n",
+    "    current_file = open(r\"testfiles\\\\\"+file, \"r\")\n",
+    "    for line in current_file:\n",
+    "        for word in line.split(\" \"):\n",
+    "            continue\n",
+    "    ss = SequentialSearchSet()\n",
+    "    start = timeit.default_timer()\n",
+    "    for line in current_file:\n",
+    "        for word in line.split(\" \"):\n",
+    "            ss.insertElement(word)\n",
+    "    for line in current_file:\n",
+    "        for word in line.split(\" \"):\n",
+    "            ss.searchElement(word)\n",
+    "    ss_time = timeit.default_timer() - start\n",
+    "\n",
+    "    bst = BinarySearchTreeSet()\n",
+    "    start = timeit.default_timer()\n",
+    "    for line in current_file:\n",
+    "        for word in line.split(\" \"):\n",
+    "            bst.insertElement(word)\n",
+    "    for line in current_file:\n",
+    "        for word in line.split(\" \"):\n",
+    "            bst.searchElement(word)\n",
+    "    bst_time = timeit.default_timer() - start\n",
+    "\n",
+    "    blt = BalancedSearchTreeSet()\n",
+    "    start = timeit.default_timer()\n",
+    "    for line in current_file:\n",
+    "        for word in line.split(\" \"):\n",
+    "            blt.insertElement(word)\n",
+    "    for line in current_file:\n",
+    "        for word in line.split(\" \"):\n",
+    "            blt.searchElement(word)\n",
+    "    blt_time = timeit.default_timer() - start\n",
+    "\n",
+    "    # bf = BloomFilterSet()\n",
+    "    # start = timeit.default_timer()\n",
+    "    # for line in current_file:\n",
+    "    #     for word in line.split(\" \"):\n",
+    "    #         bf.insertElement(word)\n",
+    "    # for line in current_file:\n",
+    "    #     for word in line.split(\" \"):\n",
+    "    #         bf.searchElement(word)\n",
+    "    # bf_time = timeit.default_timer() - start\n",
+    "    current_file.close()\n",
+    "    print(file+\": \")\n",
+    "    print(f\"Sequential Search: {ss_time:.6f} seconds\")\n",
+    "    print(f\"Binary Search Tree: {bst_time:.6f} seconds\")\n",
+    "    print(f\"Balanced Search Tree: {blt_time:.6f} seconds\")\n",
+    "    # print(f\"Bloom Filter: {bf_time:.6f} seconds\")\n",
+    "    print(\"\\n\")\n",
+    "    \n",
+    "\n",
     "\n",
     "\n",
     "\n"
@@ -513,11 +602,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for -: 'builtin_function_or_method' and 'float'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[49], line 16\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[39mfor\u001b[39;00m value \u001b[39min\u001b[39;00m data:\n\u001b[0;32m     15\u001b[0m     bst\u001b[39m.\u001b[39msearchElement(value)\n\u001b[1;32m---> 16\u001b[0m bst_time \u001b[39m=\u001b[39m timeit\u001b[39m.\u001b[39;49mdefault_timer \u001b[39m-\u001b[39;49m start\n\u001b[0;32m     18\u001b[0m \u001b[39m# Sequential Search\u001b[39;00m\n\u001b[0;32m     19\u001b[0m ss \u001b[39m=\u001b[39m SequentialSearchSet()\n",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'builtin_function_or_method' and 'float'"
+     ]
+    }
+   ],
    "source": [
     "import timeit\n",
     "\n",
