Bloom Filter Accuracy test and Space Test added

--- a/SetMembership.ipynb
+++ b/SetMembership.ipynb
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -621,6 +621,7 @@
    ],
    "source": [
     "import timeit\n",
+    "import sys\n",
     "\n",
     "# ADD YOUR TEST CODE HERE TO WORK ON SYNTHETIC DATA\n",
     "\n",
@@ -633,6 +634,7 @@
     "start = timeit.default_timer()\n",
     "for value in data:\n",
     "    bst.insertElement(value)\n",
+    "bst_space = sys.getsizeof(bst)\n",
     "for value in data:\n",
     "    bst.searchElement(value)\n",
     "bst_time = timeit.default_timer - start\n",
@@ -643,15 +645,17 @@
     "start = timeit.default_timer()\n",
     "for value in data:\n",
     "    ss.insertElement(value)\n",
+    "ss_space = sys.getsizeof(ss)\n",
     "for value in data:\n",
     "    ss.searchElement(value)\n",
-    "seq_time = timeit.default_timer() - start\n",
+    "ss_time = timeit.default_timer() - start\n",
     "\n",
     "# Balanced Search Tree\n",
     "avl = BalancedSearchTreeSet()\n",
     "start = timeit.default_timer()\n",
     "for value in data:\n",
     "    avl.insertElement(value)\n",
+    "avl_space = sys.getsizeof(avl)\n",
     "for value in data:\n",
     "    avl.searchElement(value)\n",
     "avl_time = timeit.deault_timer() - start\n",
@@ -661,16 +665,50 @@
     "start = timeit.default_timer()\n",
     "for value in data:\n",
     "    bf.insertElement(str(value))\n",
+    "bf_space = sys.getsizeof(bf)\n",
     "for value in data:\n",
     "    bf.searchElement(str(value))\n",
     "bf_time = timeit.default_timer() - start\n",
     "\n",
+    "\n",
+    "\n",
+    "# Time taken for each algorithm to insert the data and then search for the data\n",
     "print(f\"Binary Search Tree: {bst_time:.6f} seconds\")\n",
-    "print(f\"Sequential Search: {seq_time:.6f} seconds\")\n",
+    "print(f\"Sequential Search: {ss_time:.6f} seconds\")\n",
     "print(f\"Balanced Search Tree: {avl_time:.6f} seconds\")\n",
     "print(f\"Bloom Filter: {bf_time:.6f} seconds\")\n",
     "\n",
+    "# Space used by each algorithm\n",
+    "print(f\"Binary Search Tree size: {bst_space} bytes\")\n",
+    "print(f\"Sequential Search size: {ss_space} bytes\")\n",
+    "print(f\"Balanced Search Tree size: {avl_space} bytes\")\n",
+    "print(f\"Bloom Filter size: {bf_space} bytes\")\n",
+    "\n",
     "    \n",
+    "#-------------------------- Accuracy test for bloom filter-----------------------#\n",
+    "\n",
+    "# Data for the bloom filter\n",
+    "BFTest = TestDataGenerator()\n",
+    "BFdata = test.generateData(1000)\n",
+    "\n",
+    "bf2 = BloomFilterSet()\n",
+    "\n",
+    "# insert 500 integers in the Bloom Filter\n",
+    "for i in range(500):\n",
+    "    bf2.insertElement(str(i))\n",
+    "\n",
+    "# Test the Bloom Filter with 1000 integers\n",
+    "false_positives = 0\n",
+    "for i in range(1000):\n",
+    "    if i < 500:\n",
+    "        if not bf.searchElement(str(i)):\n",
+    "            print(f\"Error: {i} should be a member of the Bloom Filter\")\n",
+    "    else:\n",
+    "        if bf.searchElement(str(i)):\n",
+    "            false_positives += 1\n",
+    "\n",
+    "print(f\"False positives: {false_positives}\") \n",
+    "\n",
     "\n",
     "\n",
     "\n",
