fix errors that occurs

--- a/SetMembership.ipynb
+++ b/SetMembership.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,28 +108,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10 False\n",
-      "11 True\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "class SequentialSearchSet(AbstractSet):\n",
     "    def __init__(self):\n",
@@ -155,15 +136,7 @@
     "            if self.data[i] == element:\n",
     "                found = True\n",
     "                break\n",
-    "        print(element, found)\n",
-    "        return found\n",
-    "\n",
-    "test = SequentialSearchSet()\n",
-    "test.insertElement(11)\n",
-    "test.insertElement(0)\n",
-    "test.insertElement(4)\n",
-    "test.searchElement(10)\n",
-    "test.searchElement(11)\n"
+    "        return found"
    ]
   },
   {
@@ -175,21 +148,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n",
-      "True\n",
-      "True\n",
-      "False\n",
-      "True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class BinarySearchTreeSet(AbstractSet):\n",
     "    def __init__(self):\n",
@@ -242,14 +203,7 @@
     "            else:\n",
     "                # move to the right if the element want to find is larger\n",
     "                current = current.right\n",
-    "        return found\n",
-    "\n",
-    "test = BinarySearchTreeSet()\n",
-    "print(test.insertElement(11))\n",
-    "print(test.insertElement(0))\n",
-    "print(test.insertElement(4))\n",
-    "print(test.searchElement(10))\n",
-    "print(test.searchElement(11))"
+    "        return found"
    ]
   },
   {
@@ -261,24 +215,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "False\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class BalancedSearchTreeSet():\n",
     "    \n",
@@ -376,17 +315,7 @@
     "                currentNode = currentNode.left\n",
     "            else:\n",
     "                currentNode = currentNode.right\n",
-    "        return found \n",
-    "\n",
-    "b = BalancedSearchTreeSet()\n",
-    "print(b.insertElement(5))\n",
-    "print(b.insertElement(6))\n",
-    "print(b.insertElement(4))\n",
-    "print(b.insertElement(7))\n",
-    "print(b.insertElement(8))\n",
-    "print(b.searchElement(5))\n",
-    "print(b.searchElement(7))\n",
-    "print(b.searchElement(10))    "
+    "        return found "
    ]
   },
   {
@@ -398,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,20 +381,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['iXB', 'tPviKQ']\n",
-      "['KoYg', 'iZvQmqmmP', 'vFzSn']\n",
-      "['YSE', 'TZWn', 'tfggmejFon', 'cGyx']\n",
-      "['cnNYtpu', 'z', 'Sdwujn', 'yx', 'Cb']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import string\n",
     "import random\n",
@@ -486,13 +404,7 @@
     "            rand_str = ''.join(random.choices(string.ascii_letters, k = rand_len_str))\n",
     "            # add the string to the set\n",
     "            data.append(rand_str)        \n",
-    "        return data\n",
-    "\n",
-    "test = TestDataGenerator()\n",
-    "print(test.generateData(2))\n",
-    "print(test.generateData(3))\n",
-    "print(test.generateData(4))\n",
-    "print(test.generateData(5))"
+    "        return data"
    ]
   },
   {
@@ -504,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -512,27 +424,27 @@
      "output_type": "stream",
      "text": [
       "test-search.txt: \n",
-      "Sequential Search: 0.000006 seconds\n",
-      "Binary Search Tree: 0.000005 seconds\n",
-      "Balanced Search Tree: 0.000005 seconds\n",
+      "Sequential Search: 0.000019 seconds\n",
+      "Binary Search Tree: 0.000011 seconds\n",
+      "Balanced Search Tree: 0.000012 seconds\n",
       "\n",
       "\n",
       "test1-mobydick.txt: \n",
-      "Sequential Search: 0.000006 seconds\n",
-      "Binary Search Tree: 0.000005 seconds\n",
-      "Balanced Search Tree: 0.000004 seconds\n",
+      "Sequential Search: 0.000042 seconds\n",
+      "Binary Search Tree: 0.000012 seconds\n",
+      "Balanced Search Tree: 0.000015 seconds\n",
       "\n",
       "\n",
       "test2-warpeace.txt: \n",
-      "Sequential Search: 0.000006 seconds\n",
-      "Binary Search Tree: 0.000004 seconds\n",
-      "Balanced Search Tree: 0.000005 seconds\n",
+      "Sequential Search: 0.000022 seconds\n",
+      "Binary Search Tree: 0.000018 seconds\n",
+      "Balanced Search Tree: 0.000015 seconds\n",
       "\n",
       "\n",
       "test3-dickens.txt: \n",
-      "Sequential Search: 0.000005 seconds\n",
-      "Binary Search Tree: 0.000005 seconds\n",
-      "Balanced Search Tree: 0.000004 seconds\n",
+      "Sequential Search: 0.000025 seconds\n",
+      "Binary Search Tree: 0.000014 seconds\n",
+      "Balanced Search Tree: 0.000016 seconds\n",
       "\n",
       "\n"
      ]
@@ -543,7 +455,7 @@
     "\n",
     "file_list = [\"test-search.txt\",\"test1-mobydick.txt\",\"test2-warpeace.txt\",\"test3-dickens.txt\"]\n",
     "for file in file_list:\n",
-    "    current_file = open(r\"testfiles\\\\\"+file, \"r\")\n",
+    "    current_file = open(r\"testfiles\\\\\"+file, \"r\", encoding=\"utf-8\")\n",
     "    for line in current_file:\n",
     "        for word in line.split(\" \"):\n",
     "            continue\n",
@@ -587,35 +499,32 @@
     "    #         bf.searchElement(word)\n",
     "    # bf_time = timeit.default_timer() - start\n",
     "    current_file.close()\n",
+    "    \n",
     "    print(file+\": \")\n",
     "    print(f\"Sequential Search: {ss_time:.6f} seconds\")\n",
     "    print(f\"Binary Search Tree: {bst_time:.6f} seconds\")\n",
     "    print(f\"Balanced Search Tree: {blt_time:.6f} seconds\")\n",
     "    # print(f\"Bloom Filter: {bf_time:.6f} seconds\")\n",
-    "    print(\"\\n\")\n",
-    "    \n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "    print(\"\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for -: 'builtin_function_or_method' and 'float'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[49], line 16\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[39mfor\u001b[39;00m value \u001b[39min\u001b[39;00m data:\n\u001b[0;32m     15\u001b[0m     bst\u001b[39m.\u001b[39msearchElement(value)\n\u001b[1;32m---> 16\u001b[0m bst_time \u001b[39m=\u001b[39m timeit\u001b[39m.\u001b[39;49mdefault_timer \u001b[39m-\u001b[39;49m start\n\u001b[0;32m     18\u001b[0m \u001b[39m# Sequential Search\u001b[39;00m\n\u001b[0;32m     19\u001b[0m ss \u001b[39m=\u001b[39m SequentialSearchSet()\n",
-      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'builtin_function_or_method' and 'float'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Binary Search Tree: 0.000121 seconds\n",
+      "Sequential Search: 0.000150 seconds\n",
+      "Balanced Search Tree: 0.000131 seconds\n",
+      "Binary Search Tree size: 48 bytes\n",
+      "Sequential Search size: 48 bytes\n",
+      "Balanced Search Tree size: 48 bytes\n"
      ]
     }
    ],
@@ -627,17 +536,7 @@
     "\n",
     "# Create an object of class TestDataGenerator and use the object to generateData\n",
     "SyntheticTest = TestDataGenerator()\n",
-    "data = test.generateData(10)\n",
-    "\n",
-    "# Binary Search tree\n",
-    "bst = BinarySearchTreeSet()\n",
-    "start = timeit.default_timer()\n",
-    "for value in data:\n",
-    "    bst.insertElement(value)\n",
-    "bst_space = sys.getsizeof(bst)\n",
-    "for value in data:\n",
-    "    bst.searchElement(value)\n",
-    "bst_time = timeit.default_timer - start\n",
+    "data = SyntheticTest.generateData(10)\n",
     "\n",
     "# Sequential Search\n",
     "ss = SequentialSearchSet()\n",
@@ -650,6 +549,16 @@
     "    ss.searchElement(value)\n",
     "ss_time = timeit.default_timer() - start\n",
     "\n",
+    "# Binary Search tree\n",
+    "bst = BinarySearchTreeSet()\n",
+    "start = timeit.default_timer()\n",
+    "for value in data:\n",
+    "    bst.insertElement(value)\n",
+    "bst_space = sys.getsizeof(bst)\n",
+    "for value in data:\n",
+    "    bst.searchElement(value)\n",
+    "bst_time = timeit.default_timer() - start\n",
+    "\n",
     "# Balanced Search Tree\n",
     "avl = BalancedSearchTreeSet()\n",
     "start = timeit.default_timer()\n",
@@ -658,71 +567,55 @@
     "avl_space = sys.getsizeof(avl)\n",
     "for value in data:\n",
     "    avl.searchElement(value)\n",
-    "avl_time = timeit.deault_timer() - start\n",
+    "avl_time = timeit.default_timer() - start\n",
     "\n",
-    "# Bloom Filter \n",
-    "bf = BloomFilterSet()\n",
-    "start = timeit.default_timer()\n",
-    "for value in data:\n",
-    "    bf.insertElement(str(value))\n",
-    "bf_space = sys.getsizeof(bf)\n",
-    "for value in data:\n",
-    "    bf.searchElement(str(value))\n",
-    "bf_time = timeit.default_timer() - start\n",
-    "\n",
-    "\n",
+    "# # Bloom Filter \n",
+    "# bf = BloomFilterSet()\n",
+    "# start = timeit.default_timer()\n",
+    "# for value in data:\n",
+    "#     bf.insertElement(str(value))\n",
+    "# bf_space = sys.getsizeof(bf)\n",
+    "# for value in data:\n",
+    "#     bf.searchElement(str(value))\n",
+    "# bf_time = timeit.default_timer() - start\n",
     "\n",
     "# Time taken for each algorithm to insert the data and then search for the data\n",
     "print(f\"Binary Search Tree: {bst_time:.6f} seconds\")\n",
     "print(f\"Sequential Search: {ss_time:.6f} seconds\")\n",
     "print(f\"Balanced Search Tree: {avl_time:.6f} seconds\")\n",
-    "print(f\"Bloom Filter: {bf_time:.6f} seconds\")\n",
+    "# print(f\"Bloom Filter: {bf_time:.6f} seconds\")\n",
     "\n",
     "# Space used by each algorithm\n",
     "print(f\"Binary Search Tree size: {bst_space} bytes\")\n",
     "print(f\"Sequential Search size: {ss_space} bytes\")\n",
     "print(f\"Balanced Search Tree size: {avl_space} bytes\")\n",
-    "print(f\"Bloom Filter size: {bf_space} bytes\")\n",
+    "# print(f\"Bloom Filter size: {bf_space} bytes\")\n",
     "\n",
     "    \n",
     "#-------------------------- Accuracy test for bloom filter-----------------------#\n",
     "\n",
     "# Data for the bloom filter\n",
-    "BFTest = TestDataGenerator()\n",
-    "BFdata = test.generateData(1000)\n",
+    "# BFTest = TestDataGenerator()\n",
+    "# BFdata = BFTest.generateData(1000)\n",
     "\n",
-    "bf2 = BloomFilterSet()\n",
+    "# bf2 = BloomFilterSet()\n",
     "\n",
-    "# insert 500 integers in the Bloom Filter\n",
-    "for i in range(500):\n",
-    "    bf2.insertElement(str(i))\n",
+    "# # insert 500 integers in the Bloom Filter\n",
+    "# for i in range(500):\n",
+    "#     bf2.insertElement(str(i))\n",
     "\n",
-    "# Test the Bloom Filter with 1000 integers\n",
-    "false_positives = 0\n",
-    "for i in range(1000):\n",
-    "    if i < 500:\n",
-    "        if not bf.searchElement(str(i)):\n",
-    "            print(f\"Error: {i} should be a member of the Bloom Filter\")\n",
-    "    else:\n",
-    "        if bf.searchElement(str(i)):\n",
-    "            false_positives += 1\n",
+    "# # Test the Bloom Filter with 1000 integers\n",
+    "# false_positives = 0\n",
+    "# for i in range(1000):\n",
+    "#     if i < 500:\n",
+    "#         if not bf.searchElement(str(i)):\n",
+    "#             print(f\"Error: {i} should be a member of the Bloom Filter\")\n",
+    "#     else:\n",
+    "#         if bf.searchElement(str(i)):\n",
+    "#             false_positives += 1\n",
     "\n",
-    "print(f\"False positives: {false_positives}\") \n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "# print(f\"False positives: {false_positives}\") "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
