fix errors that occurs

--- a/SetMembership.ipynb
+++ b/SetMembership.ipynb
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 41,
    "metadata": {
     "tags": []
    },
@@ -519,9 +519,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Binary Search Tree: 0.000121 seconds\n",
-      "Sequential Search: 0.000150 seconds\n",
-      "Balanced Search Tree: 0.000131 seconds\n",
+      "Binary Search Tree: 0.000254 seconds\n",
+      "Sequential Search: 0.000263 seconds\n",
+      "Balanced Search Tree: 0.000223 seconds\n",
+      "\n",
+      "\n",
       "Binary Search Tree size: 48 bytes\n",
       "Sequential Search size: 48 bytes\n",
       "Balanced Search Tree size: 48 bytes\n"
@@ -584,6 +586,8 @@
     "print(f\"Sequential Search: {ss_time:.6f} seconds\")\n",
     "print(f\"Balanced Search Tree: {avl_time:.6f} seconds\")\n",
     "# print(f\"Bloom Filter: {bf_time:.6f} seconds\")\n",
+    "\n",
+    "print(\"\\n\")\n",
     "\n",
     "# Space used by each algorithm\n",
     "print(f\"Binary Search Tree size: {bst_space} bytes\")\n",
