add code for size of file for real data

--- a/SetMembership.ipynb
+++ b/SetMembership.ipynb
@@ -509,6 +509,7 @@
     "    # for line in current_file:\n",
     "    #     for word in line.split(\" \"):\n",
     "    #         bf.insertElement(word)\n",
+    "    # bf_space = bf.__sizeof__()\n",
     "    # for line in current_file:\n",
     "    #     for word in line.split(\" \"):\n",
     "    #         bf.searchElement(word)\n",
